# comp_hack

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  clang_format.sh  index.html  vsbuild_x64.bat  vsbuild_x86.bat
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  pr.yml
ci/: clang-format.sh  github-linux.sh  global.sh  linux-build.sh  linux-warmcache.sh  windows-build.ps1  windows-updater-build.ps1  windows-updater.sh  windows-warmcache.sh
ci/checksums/: OpenSSL-1_1_1c-win64.msi.sha1  clang+llvm-3.8.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz.sha1  cmake-3.6.1-Linux-x86_64.tar.gz.sha1  doxygen.zip.sha1  external-0.1.1-clang.tar.bz2.sha1  external-0.1.1-gcc5.tar.bz2.sha1  external-0.1.1-win32.zip.sha1  external-0.1.1-win64.zip.sha1  ninja-linux.zip.sha1  qt-5.12.3-win32.7z.sha1  qt-5.12.3-win64.7z.sha1  wix311.exe.sha1
client/: CMakeLists.txt
client/res/: builtins.nut  client.qrc
client/src/: ChannelScene.cpp  ChannelScene.h  ControlCenter.cpp  ControlCenter.h  CreateCharacter.cpp  CreateCharacter.h  GameWorker.cpp  GameWorker.h  LobbyScene.cpp  LobbyScene.h  LoginDialog.cpp  LoginDialog.h  ScriptWorker.cpp  ScriptWorker.h  main.cpp
client/ui/: ChannelScene.ui  ControlCenter.ui  CreateCharacter.ui  LoginDialog.ui
cmake/: FindSYSTEMD.cmake  FindTinyXML2.cmake  git-version.cmake
contrib/: KEEP  cpmaker.py  sources.sh
contrib/installer/: .gitignore  License.rtf  README.md  generate.py  installer.in.wxs
contrib/nixconfig/: channel.xml  lobby.xml  world.xml
contrib/pages/: index.html
contrib/testing/: setup.sql
contrib/testing/config/: constants.xml
contrib/webroot/accountmanager/: edit.html  home.html  index.html
contrib/winconfig/: channel.xml  lobby.xml  world.xml
debian/: changelog  comphack.install
docs/guide/: Makefile  conf.py  index.rst  make.bat
docs/guide/chapters/: config.rst  content.rst  hacking.rst  intro.rst  setup.rst  translation.rst
libclient/: CMakeLists.txt
libclient/src/: AmalaManager.cpp  AmalaManager.h  ChannelClient.cpp  ChannelClient.h  ClientManager.h  ConnectionManager.cpp  ConnectionManager.h  LobbyClient.cpp  LobbyClient.h  LobbyManager.cpp  LobbyManager.h  LogicWorker.cpp  LogicWorker.h  MessageAccountDump.cpp  MessageAccountDump.h  MessageCharacterList.cpp  MessageCharacterList.h  MessageClient.cpp  MessageClient.h  MessageConnected.cpp  MessageConnected.h  MessageConnectionInfo.cpp  MessageConnectionInfo.h  MessageCreateDeleteClient.h  MessageRunScript.h  MessageStartGame.cpp  MessageStartGame.h
libconfig/: CMakeLists.txt
libconfig/src/: ConfigLogVersion.cpp
libhack/: CMakeLists.txt
libhack/doc/: Doxyfile.in
libhack/schema/: account.xml  accountlogin.xml  action_updatecomp.xml  character.xml  demon.xml  fusion.xml  libhack-master.xml  server_constants.xml  server_zone.xml  tokusei.xml  worldsharedconfig.xml
libhack/schema/binarydata/: enchantdata.xml  ultimatebattlebasedata.xml  warppointdata.xml
libhack/src/: BinaryDataSet.cpp  BinaryDataSet.h  ChannelConnection.cpp  ChannelConnection.h  Config.h  Constants.h.in  DefinitionManager.cpp  DefinitionManager.h  ErrorCodes.cpp  ErrorCodes.h  LobbyConnection.cpp  LobbyConnection.h  Log.cpp  Log.h  MessageWorldNotification.cpp  MessageWorldNotification.h  PacketCodes.h  PersistentObjectInitialize.cpp  PersistentObjectInitialize.h  ScriptEngine.cpp  ScriptEngine.h  Server.cpp  Server.h  ServerConstants.cpp  ServerConstants.h  ServerDataManager.cpp  ServerDataManager.h
libpackets/: CMakeLists.txt
libpackets/schema/: libpackets-master.xml  packet_account_dump.xml  packet_auth.xml  packet_auth_reply.xml  packet_characterlist.xml  packet_login.xml  packet_login_reply.xml  packet_req_start_game.xml  packet_start_game.xml  packet_worldlist.xml
libtester/: CMakeLists.txt
libtester/src/: ChannelClient.cpp  ChannelClient.h  ChannelClient_HandleAmalaAccountDumpHeader.cpp  ChannelClient_HandleAmalaAccountDumpPart.cpp  ChannelClient_HandleAmalaServerVersion.cpp  ChannelClient_HandleCharacterData.cpp  ChannelClient_HandleDemonBoxData.cpp  ChannelClient_HandleZoneChange.cpp  HttpConnection.cpp  HttpConnection.h  LobbyClient.cpp  LobbyClient.h  Login.cpp  Login.h  ServerTest.cpp  ServerTest.h  TestClient.cpp  TestClient.h  TestConfig.h
libtester/tests/: ChannelLogin.cpp  Lobby.cpp
migrations/world/: 20200712_wyrd_stat_points.nut
server/channel/: CMakeLists.txt
server/channel/doc/: Doxyfile.in
server/channel/schema/: clientstate.xml  entitystate.xml  master.xml  zone.xml
server/channel/src/: AICommand.cpp  AICommand.h  AIManager.cpp  AIManager.h  AIState.cpp  AIState.h  AccountManager.cpp  AccountManager.h  ActionManager.cpp  ActionManager.h  ActiveEntityState.cpp  ActiveEntityState.h  AllyState.cpp  AllyState.h  BazaarState.cpp  BazaarState.h  ChannelClientConnection.cpp  ChannelClientConnection.h  ChannelServer.cpp  ChannelServer.h  ChannelSyncManager.cpp  ChannelSyncManager.h  CharacterManager.cpp  CharacterManager.h  CharacterState.cpp  CharacterState.h  ChatManager.cpp  ChatManager.h  ClientState.cpp  ClientState.h  CultureMachineState.cpp  CultureMachineState.h  DemonState.cpp  DemonState.h  EnemyState.cpp  EnemyState.h  EntityState.cpp  EntityState.h  EventManager.cpp  EventManager.h  (+36 more)
server/lobby/: CMakeLists.txt
server/lobby/doc/: Doxyfile.in
server/lobby/schema/: clientstate.xml  lobbyconfig.xml  (+1 more)
server/world/: CMakeLists.txt
tests/: .gitignore  required.lst  run.py  run.sh  skip.lst
tests/quick/: lobby_bad_password.nut  lobby_connection.nut
tools/: CMakeLists.txt
tools/bdpatch/: CMakeLists.txt
tools/bgmtool/: CMakeLists.txt
tools/capgrep/: CMakeLists.txt
tools/cathedral/: CMakeLists.txt
tools/decrypt/: CMakeLists.txt
tools/encrypt/: CMakeLists.txt
tools/exports/: CMakeLists.txt
tools/logger/: CMakeLists.txt
tools/manager/: CMakeLists.txt
tools/nifcrypt/: CMakeLists.txt
tools/patcher/: CMakeLists.txt
tools/rehash/: CMakeLists.txt
tools/translator/: CMakeLists.txt
tools/translator/src/: translator.cpp
tools/updater/: CMakeLists.txt
tools/verify/: CMakeLists.txt
(+564 files in other folders)
